--- a/sep-0000.html
+++ b/sep-0000.html
@@ -64,6 +64,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  Meta-SEPs (SEPs about SEPs or Processes)
 
  P     <a href="sep-0001.html">1</a>  SEP Purpose and Guidelines                              Carroll
+ P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
 
  Other Informational SEPs
 
@@ -86,6 +87,8 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
      num  title                                                   owner
      ---  -----                                                   -----
  P     <a href="sep-0001.html">1</a>  SEP Purpose and Guidelines                              Carroll
+
+ P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
 
 
 </pre>
