--- a/sep-0000.html
+++ b/sep-0000.html
@@ -12,7 +12,9 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 <meta name="robots" content="index,follow"> 
  
   <title>SEP SEP 0 -- Index of SPaRC Enhancement Proposals (SEPs) -- SEP 0 -- SEP 0 -- Index of SPaRC Enhancement Proposals (SEPs)</title>
+  <link rel="stylesheet" type="text/css" charset="utf-8" media="all" href="common.css"/>
  <link rel="stylesheet" href="sep.css" type="text/css" />
+<link rel="stylesheet" href="common.css" type="text/css" />
  
 </head> 
  
@@ -32,8 +34,8 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 
 <div class="header">
 <table border="0" class="rfc2822 docutils field-list" frame="void" rules="none">
-<col class="field-name" /> 
-<col class="field-body" /> 
+<col class="field-name" />
+<col class="field-body" />
 <tbody valign="top">
   <tr class="field"><th class="field-name">SEP:&nbsp;</th><td class="field-body">0</td></tr>
   <tr class="field"><th class="field-name">Title:&nbsp;</th><td class="field-body">Index of SPaRC Enhancement Proposals (SEPs)</td></tr>
