--- a/sep-0001.html
+++ b/sep-0001.html
@@ -12,6 +12,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 <meta name="robots" content="index,follow"> 
  
   <title>SEP 1 -- SEP Purpose and Guidelines</title>
+  <link rel="stylesheet" type="text/css" charset="utf-8" media="all" href="common.css"/>
  <link rel="stylesheet" href="sep.css" type="text/css" />
  
 </head> 
