--- a/sep-0000.html
+++ b/sep-0000.html
@@ -14,7 +14,6 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
   <title>SEP SEP 0 -- Index of SPaRC Enhancement Proposals (SEPs) -- SEP 0 -- SEP 0 -- Index of SPaRC Enhancement Proposals (SEPs)</title>
   <link rel="stylesheet" type="text/css" charset="utf-8" media="all" href="common.css"/>
  <link rel="stylesheet" href="sep.css" type="text/css" />
-<link rel="stylesheet" href="common.css" type="text/css" />
  
 </head> 
  
@@ -34,8 +33,8 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 
 <div class="header">
 <table border="0" class="rfc2822 docutils field-list" frame="void" rules="none">
-<col class="field-name" />
-<col class="field-body" />
+<col class="field-name" /> 
+<col class="field-body" /> 
 <tbody valign="top">
   <tr class="field"><th class="field-name">SEP:&nbsp;</th><td class="field-body">0</td></tr>
   <tr class="field"><th class="field-name">Title:&nbsp;</th><td class="field-body">Index of SPaRC Enhancement Proposals (SEPs)</td></tr>
@@ -69,6 +68,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  P     <a href="sep-0002.html">2</a>  Requirements for Keypad Access                          Smolin
  P     <a href="sep-0003.html">3</a>  Lab Policies and Rules                                  Carroll
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
+ P    <a href="sep-0020.html">20</a>  The Zen of SPaRC                                        Kreitzer
 
  Other Informational SEPs
 
@@ -96,6 +96,8 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
 
+ P    <a href="sep-0020.html">20</a>  The Zen of SPaRC                                        Kreitzer
+
 
 </pre>
 <h3>Key</h3>
@@ -120,6 +122,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
     name              email address
     ----              -------------
     Carroll, Michael  
+    Kreitzer, Markus  
     Smolin, Levi      
 
 
