--- a/sep-0000.html
+++ b/sep-0000.html
@@ -68,6 +68,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  P     <a href="sep-0001.html">1</a>  SEP Purpose and Guidelines                              Carroll
  P     <a href="sep-0002.html">2</a>  Requirements for Keypad Access                          Smolin
  P     <a href="sep-0003.html">3</a>  Lab Policies and Rules                                  Carroll
+ P     <a href="sep-0004.html">4</a>  Purchase Request SEP                                    Straub
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
 
  Other Informational SEPs
@@ -93,6 +94,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  P     <a href="sep-0001.html">1</a>  SEP Purpose and Guidelines                              Carroll
  P     <a href="sep-0002.html">2</a>  Requirements for Keypad Access                          Smolin
  P     <a href="sep-0003.html">3</a>  Lab Policies and Rules                                  Carroll
+ P     <a href="sep-0004.html">4</a>  Purchase Request SEP                                    Straub
 
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
 
@@ -121,6 +123,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
     ----              -------------
     Carroll, Michael  
     Smolin, Levi      
+    Straub, Ben       straub&#32;&#97;t&#32;auburn.edu
 
 
 </pre>
