--- a/sep-0000.html
+++ b/sep-0000.html
@@ -67,6 +67,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  P     <a href="sep-0001.html">1</a>  SEP Purpose and Guidelines                              Carroll
  P     <a href="sep-0002.html">2</a>  Requirements for Keypad Access                          Smolin
  P     <a href="sep-0003.html">3</a>  Lab Policies and Rules                                  Carroll
+ P     <a href="sep-0005.html">5</a>  Requirements for Keypad Access                          Smolin
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
  P    <a href="sep-0020.html">20</a>  The Zen of SPaRC                                        Kreitzer
 
@@ -93,6 +94,8 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  P     <a href="sep-0001.html">1</a>  SEP Purpose and Guidelines                              Carroll
  P     <a href="sep-0002.html">2</a>  Requirements for Keypad Access                          Smolin
  P     <a href="sep-0003.html">3</a>  Lab Policies and Rules                                  Carroll
+
+ P     <a href="sep-0005.html">5</a>  Requirements for Keypad Access                          Smolin
 
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
 
