--- a/sep-0020.html
+++ b/sep-0020.html
@@ -45,7 +45,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 </tr>
 <tr class="field"><th class="field-name">Author:</th><td class="field-body">Markus Kreitzer</td>
 </tr>
-<tr class="field"><th class="field-name">Status:</th><td class="field-body">Draft</td>
+<tr class="field"><th class="field-name">Status:</th><td class="field-body">Active</td>
 </tr>
 <tr class="field"><th class="field-name">Type:</th><td class="field-body">Process</td>
 </tr>
