--- a/sep-0000.html
+++ b/sep-0000.html
@@ -38,7 +38,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 <tbody valign="top">
   <tr class="field"><th class="field-name">SEP:&nbsp;</th><td class="field-body">0</td></tr>
   <tr class="field"><th class="field-name">Title:&nbsp;</th><td class="field-body">Index of SPaRC Enhancement Proposals (SEPs)</td></tr>
-  <tr class="field"><th class="field-name">Last-Modified:&nbsp;</th><td class="field-body"><a href="https://github.com/AuburnSPaRC/SEP/blob/gh-pages/sep-0000.html">2012-04-11</a> </td></tr>
+  <tr class="field"><th class="field-name">Last-Modified:&nbsp;</th><td class="field-body"><a href="https://github.com/AuburnSPaRC/SEP/blob/gh-pages/sep-0000.html">2012-04-17</a> </td></tr>
   <tr class="field"><th class="field-name">Author:&nbsp;</th><td class="field-body">SPaRC Team</td></tr>
   <tr class="field"><th class="field-name">Status:&nbsp;</th><td class="field-body">Active</td></tr>
   <tr class="field"><th class="field-name">Type:&nbsp;</th><td class="field-body">Informational</td></tr>
@@ -75,13 +75,13 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  Other Informational SEPs
 
 
- Accepted SEPs (accepted; may not be implemented yet)
+ Accepted SEPs
 
 
  Open SEPs (under consideration)
 
 
- Finished SEPs (done, implemented in code sepository)
+ Finished SEPs
 
 
  Deferred, Abandoned, Withdrawn, and Rejected SEPs
@@ -106,7 +106,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 </pre>
 <h3>Key</h3>
 <pre>
-    S - Standards Track SEP
+    R - Rules SEP
     I - Informational SEP
     P - Process SEP
 
@@ -125,7 +125,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
 <pre>
     name              email address
     ----              -------------
-    Carroll, Michael  
+    Carroll, Michael  mjcarroll&#32;&#97;t&#32;ieee.org
     Kreitzer, Markus  
     Smolin, Levi      
     Straub, Ben       straub&#32;&#97;t&#32;auburn.edu
