--- a/sep-0000.html
+++ b/sep-0000.html
@@ -69,6 +69,7 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  P     <a href="sep-0003.html">3</a>  Lab Policies and Rules                                  Carroll
  P     <a href="sep-0004.html">4</a>  Purchase Request SEP                                    Straub
  P     <a href="sep-0005.html">5</a>  Requirements for Keypad Access                          Smolin
+ P    <a href="sep-0010.html">10</a>  Voting Guidelines                                       Carroll
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
  P    <a href="sep-0020.html">20</a>  The Zen of SPaRC                                        Kreitzer
 
@@ -97,6 +98,8 @@ DO NOT USE THIS HTML FILE AS YOUR TEMPLATE!
  P     <a href="sep-0003.html">3</a>  Lab Policies and Rules                                  Carroll
  P     <a href="sep-0004.html">4</a>  Purchase Request SEP                                    Straub
  P     <a href="sep-0005.html">5</a>  Requirements for Keypad Access                          Smolin
+
+ P    <a href="sep-0010.html">10</a>  Voting Guidelines                                       Carroll
 
  P    <a href="sep-0012.html">12</a>  Sample reStructuredText SEP Template                    Carroll
 
